--- a/index.css
+++ b/index.css
@@ -135,7 +135,7 @@ transition: 0.8s;
     padding: 10px 0 10px 15px;
     font-family: "Open Sans", sans;
     font-weight: 400;
-    color: #377d6a;
+    color: #030303;
     background: #ffb7b7;
     border: 0;
     border-radius: 3px;
