--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 body{
     
-    /* background-image: url(pic.JPG); */
+    /* background-image: url(kanha-kiika.jpg); */
     background-position: center center ;
     display: flex;
     flex-direction: column;
