--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ h1{
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image:url(pic.JPG);
+    background-image:url(kanha-kiika.jpg);
     background-position: center;
     position: relative;
     color: rgba(255, 180, 206, 1);  
