--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ h1{
     background-image:url(kanha-kiika.jpg);
     background-position: center;
     position: relative;
-    color: rgba(255, 180, 206, 1);  
+    color: #0c48a8;  
     background-size: cover;     
 }
 
